--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -44,6 +44,15 @@
           "reason": '$string:REASON_INTERNET_PERMISSION'
         },
         {
+          "name" : "ohos.permission.SYSTEM_FLOAT_WINDOW",
+          "usedScene": {
+            "abilities": [
+              "EntryAbility"
+            ],
+            "when":"inuse"
+          }
+        },
+        {
           "name": "ohos.permission.KEEP_BACKGROUND_RUNNING",
           "reason": '$string:REASON_KEEP_BACKGROUND_RUNNING'
         },
