--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -43,15 +43,15 @@
           "name": "ohos.permission.INTERNET",
           "reason": '$string:REASON_INTERNET_PERMISSION'
         },
-        {
-          "name" : "ohos.permission.SYSTEM_FLOAT_WINDOW",
-          "usedScene": {
-            "abilities": [
-              "EntryAbility"
-            ],
-            "when":"inuse"
-          }
-        },
+//        {
+//          "name" : "ohos.permission.SYSTEM_FLOAT_WINDOW",
+//          "usedScene": {
+//            "abilities": [
+//              "EntryAbility"
+//            ],
+//            "when":"inuse"
+//          }
+//        },
         {
           "name": "ohos.permission.KEEP_BACKGROUND_RUNNING",
           "reason": '$string:REASON_KEEP_BACKGROUND_RUNNING'
@@ -60,19 +60,5 @@
           "name": "ohos.permission.VIBRATE"
         }
       ]
-//    "extensionAbilities": [
-//      {
-//        "name": "EntryBackupAbility",
-//        "srcEntry": "./ets/entrybackupability/EntryBackupAbility.ets",
-//        "type": "backup",
-//        "exported": false,
-//        "metadata": [
-//          {
-//            "name": "ohos.extension.backup",
-//            "resource": "$profile:backup_config"
-//          }
-//        ],
-//      }
-//    ]
   }
 }
