--- a/oh-package.json5
+++ b/oh-package.json5
@@ -6,7 +6,8 @@
     "@pie/lazy-data": "^1.0.0",
     "@pura/picker_utils": "^1.0.0",
     "@sj/mediacache": "^1.0.3",
-    "@ohos/axios": "^2.2.6"
+    "@ohos/axios": "^2.2.6",
+    "@hw-agconnect/ui-skeleton": "^1.0.0"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.19",
